crates/ty_python_semantic/resources/mdtest/snapshots/unsupported_bool_con…_-_Different_ways_that_…_-_Has_a_`__bool__`_att…_(2721d40bf12fe8b7).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: unsupported_bool_conversion.md - Different ways that `unsupported-bool-conversion` can occur - Has a `__bool__` attribute, but it's not callable
mdtest path: crates/ty_python_semantic/resources/mdtest/diagnostics/unsupported_bool_conversion.md
---

# Python source files

## mdtest_snippet.py

```
1 | class NotBoolable:
2 |     __bool__: int = 3
3 | 
4 | a = NotBoolable()
5 | 
6 | # error: [unsupported-bool-conversion]
7 | 10 and a and True
```

# Diagnostics

```
error[unsupported-bool-conversion]: Boolean conversion is unsupported for object of type `NotBoolable`
 --> src/mdtest_snippet.py:7:8
  |
6 | # error: [unsupported-bool-conversion]
7 | 10 and a and True
  |        ^
  |
info: `NotBoolable.__bool__` is not callable
info: rule `unsupported-bool-conversion` is enabled by default

```
